--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     /*cor texto quest/Buttom*/
     --cor-texto: #fafafa;
     /*cor do texto pergunta*/
-    --cor-fadeButtom: #000000;
+    --cor-fadeButtom: #1c5a1f;
     /*cor fadebuttom*/
 }
 
