--- a/style.css
+++ b/style.css
@@ -23,7 +23,10 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
-
+img{
+    max-width: 150%;
+    height: auto;
+}
 /* Estilo da caixa principal */
 .caixa-principal {
     background-color: var(--cor-principal);
